[T258] - Added yield view mode

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/template/yield-manager-dashboard.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/template/yield-manager-dashboard.html
@@ -2,8 +2,9 @@
 	<div class="yield-manager-dashboard operations-dashboard">
 		<yield-filter-pane [yieldManager]="self" class="pane full-height"></yield-filter-pane>
 		<div class="main flex-column">
-			<yield-key-metrics customScroll [yieldManager]="self"></yield-key-metrics>
-			<yield-price-products customScroll [yieldManager]="self"></yield-price-products>
+			<yield-key-metrics customScroll class="{{keyMetricsViewModeDecoratorClass}}" [yieldManager]="self"></yield-key-metrics>
+			<yield-view-mode (onStateChange)="viewModeStateChanged($event)"></yield-view-mode>
+			<yield-price-products customScroll class="{{priceProductsViewModeDecoratorClass}}" [yieldManager]="self"></yield-price-products>
 		</div>
 	</div>
 </div>
