invoice operations [WIP]

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-edit/template/invoice-edit.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-edit/template/invoice-edit.html
@@ -1,12 +1,15 @@
 <div class="invoice-edit-container full-height" [ngClass]="{'read-only-invoice': !editMode}" customScroll>
     <div class="invoice-edit-wrap">
         <p class="invoice-title-container">
-            <span class="invoice-title" [ngClass]="{'read-only': !editMode}">
+            <span class="invoice-title m-l-16" [ngClass]="{'read-only': !editMode}">
                 <i *ngIf="isPaid" class="fa fa-check" aria-hidden="true"></i> {{ 'Invoice' | translate }} #{{ invoiceVMIndex + 1 }} <b *ngIf="isPaid"> {{ 'PAID' | translate }}</b>
             </span>
-
             <span class="invoice-remove" *ngIf="editMode && isNewlyAdded">
                 <a class="btn btn-xs" title="{{ 'Delete' | translate}}" (click)="onDelete()"><i class="fa unitpal-font">\</i></a>
+            </span>            
+            <br/>
+            <span *ngFor="let errorMessage of errorMessageList" class="text-warning m-l-16">
+                <small><i class="fa fa-info-circle"></i>{{ errorMessage | translate }}</small><br/>
             </span>
         </p>
 
@@ -73,7 +76,7 @@
     </div>
 
     <div *ngIf="!editMode && !isPaid" class="invoice-edit-footer">
-        <button type="button" class="btn btn-primary">
+        <button type="button" class="btn btn-primary" (click)="onPayInvoice()">
             <i class="fa fa-2x unitpal-font rotate-45">L</i> {{ 'Pay Invoice' | translate }}
         </button>
     </div>
