--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-payer/template/invoice-payer.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-payer/template/invoice-payer.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             
-            <div *ngIf="editMode && isNewlyAdded" class="form-group m-0">
+            <div *ngIf="editMode && isNewlyAdded && !isTheSinglePayer" class="form-group m-0">
                 <div class="input-group">
                     <span>
                         <a class="btn btn-xs" title="{{ 'Delete' | translate}}" (click)="onDelete()"><i class="fa unitpal-font">\</i></a>
