--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
@@ -13,12 +13,7 @@
 		</item-list-navigator>
 
 		<div *ngIf="editMode" class="invoice-operations-btn-group">
-			<th-button>
-				<a class="btn th-button-box" (click)="onAddInvoice()">
-					<i class="fa fa-2x unitpal-font">'</i>
-					<span>{{ 'Add Invoice' | translate }}</span>
-				</a>
-			</th-button>
+			<th-button [upFont]="'\''" [text]="'Add Invoice'" (onButtonClick)="onAddInvoice()"></th-button>
 			<button class="btn btn-primary" type="button" (click)="onSave()"> {{ 'Save Changes' | translate }}</button>
 			<button class="btn btn-danger" type="button" (click)="onCancel()"> {{ 'Cancel' | translate }}</button>
 		</div>
