--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/template/yield-manager-dashboard.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/template/yield-manager-dashboard.html
@@ -1,6 +1,6 @@
 <div class="row full-height">
 	<div class="yield-manager-dashboard operations-dashboard">
-		<yield-filter-pane [yieldManager]="self" class="pane full-height"></yield-filter-pane>
+		<yield-filter-pane [yieldManager]="self" class="pane full-height" (filterChanged)="filterChangeHandler($event)"></yield-filter-pane>
 		<div class="main flex-column">
 			<yield-key-metrics customScroll class="{{keyMetricsViewModeDecoratorClass}}" [yieldManager]="self"></yield-key-metrics>
 			<yield-view-mode (onStateChange)="viewModeStateChanged($event)"></yield-view-mode>
