--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -2676,6 +2676,7 @@ a.btn.btn-square:focus {
         flex-grow: 1;
         border-left: 1px solid #DBDBDB;
         border-right: 1px solid #DBDBDB;
+        height: 100%;
     }
 
     .yield-manager-dashboard yield-key-metrics,
