--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-edit/template/invoice-edit.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-edit/template/invoice-edit.html
@@ -16,7 +16,7 @@
             </span>
         </p>
 
-        <invoice-payer *ngFor="let invoicePayerVM of invoicePayerVMList; let invoicePayerVMIndex = index" [invoiceVMIndex]="invoiceVMIndex"
+        <invoice-payer *ngFor="let invoicePayerVM of invoicePayerVMList; let invoicePayerVMIndex = index" [invoiceReference]="invoiceReference"
             [invoicePayerVMIndex]="invoicePayerVMIndex"></invoice-payer>
 
         <p *ngIf="editMode" class="btn-add-invoice-payer">
