[T261] PP with LRA & Prop Details (resolved points 1&3)

--- a/assets/client/src/pages/internal/containers/common/basic-info/property-details/main/template/basic-info-property-details-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/property-details/main/template/basic-info-property-details-edit.html
@@ -45,7 +45,7 @@
                     </th-hour-select>
                 </div>
                 <div class="col-xs-6 col-md-6 form-group">
-                    <label>{{ 'Booking Cancellation Hour' | translate }}</label>
+                    <label>{{ 'Booking Cancellation Hour' | translate }}*</label>
                     <th-hour-select [initialHour]="hotel.operationHours.cancellationHour" (onHourSelected)="diChangeCancellationHour($event)"
                         [isRequired]="true" errorMessage="{{ 'Required' | translate }}" [didSubmitForm]="didSubmitForm">
                     </th-hour-select>
