--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/room-operations/template/room-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/room-operations/template/room-operations-page.html
@@ -23,7 +23,10 @@
 	</div>
 	<div class="col-xs-3 full-height right-sidebar">
 		<div class="row padding-top-10px full-height" customScroll>
-			<room-booking-preview [roomOperationsPageData]="roomOperationsPageData" (onBookingChanged)="didChangeBooking($event)"></room-booking-preview>
+			<room-booking-preview [roomOperationsPageData]="roomOperationsPageData" 
+				(onBookingChanged)="didChangeBooking($event)"
+				(onRoomChanged)="didChangeRoom($event)">
+			</room-booking-preview>
 		</div>
 	</div>
 </div>
