[T251] small template change

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/room-operations/components/booking-preview/template/room-booking-preview.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/room-operations/components/booking-preview/template/room-booking-preview.html
@@ -71,9 +71,10 @@
     </div>
 </div>
 
-<hr/>
-
 <div class="col-xs-12">
+    <div class="row">
+        <hr/>
+    </div>
     <div class="row">
         <div class="col-xs-12 padding-top-5px" *ngIf="requiresAddingRollawayBeds">
             <span class="orange-color">
