--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-price-products/components/yield-actions-panel/template/yield-actions-panel.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-price-products/components/yield-actions-panel/template/yield-actions-panel.html
@@ -28,6 +28,10 @@
 		<div class="form-group flex-row flex-center-v">
 			<input type="checkbox" class="dark-gray-color m-r-12" [(ngModel)]="forever">
 			<span class="m-r-12">Forever</span>
-			<div class="btn btn-danger f-14" (click)="applyChanges()">APPLY CHANGES</div>
+			<div class="btn btn-danger f-14" (click)="applyChanges()">
+				<i class="fa fa-refresh fa-spin" *ngIf="isYielding"></i> 
+				<i class="fa fa-check" *ngIf="!isYielding"></i> 
+				APPLY CHANGES
+			</div>
 		</div>
 </div>
